# its-prep

./: .gitignore  README.org  docs.nix  flake.nix  make_docs.sh  overlays.nix  pyproject.toml  python-lib.nix  requirements.txt  setup.py  shell.nix
docs/: conf.py  index.rst  nlprep.rst  nlprep.spacy.rst  nlprep.specs.rst
html/: genindex.html  index.html  nlprep.html  nlprep.spacy.html  nlprep.specs.html  objects.inv  py-modindex.html  search.html  searchindex.js
html/_sources/: index.rst.txt  nlprep.rst.txt  nlprep.spacy.rst.txt
its_prep/: __init__.py  core.py  types.py
its_prep/spacy/: __init__.py  props.py  utils.py
its_prep/specs/: collections.py  filters.py  pipelines.py
nlprep/: core.py  types.py  utils.py
nlprep/spacy/: props.py  utils.py
nlprep/specs/: collections.py  filters.py  pipelines.py
src/wloprep/: filter.py  filter_specs.py  pipeline_specs.py  spacy_utils.py  utils.py
test/: conftest.py  strategies.py  test_core.py  test_filter.py  test_filter_specs.py  test_spacy.py  test_types.py
wloprep/: core.py  filter.py  filter_specs.py  pipeline_specs.py  spacy_utils.py  types.py
wloprep/spacy/: props.py
wloprep/specs/: collections.py  filters.py  pipelines.py
